Error in console after multi-object editing undo #54712

Closed
opened 2018-04-18 18:42:05 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: blender2.8 HEAD (ec0756af6c)
Worked: -

Short description of error
Error after undoing multiple times after multi-object editing operator (face triangulation).

Exact steps for others to reproduce the error

  • Add a new cube
  • Select both cubes go to edit mode
  • Ctrl+T (Triangulate)
  • Back to object mode
  • Select only one of the cubes
  • Undo (Ctrl+Z) x 2

I then get the following error message in the console:
ERROR (ed.undo.mesh): //source/blender/editors/mesh/editmesh_undo.c:740 mesh_undosys_step_decode: name='Triangulate Faces', failed to enter edit-mode for object 'OBCube.001', undo state invalid

**Blender Version** Broken: blender2.8 HEAD (ec0756af6c75) Worked: - **Short description of error** Error after undoing multiple times after multi-object editing operator (face triangulation). **Exact steps for others to reproduce the error** * Add a new cube * Select both cubes go to edit mode * Ctrl+T (Triangulate) * Back to object mode * Select only one of the cubes * Undo (Ctrl+Z) x 2 I then get the following error message in the console: `ERROR (ed.undo.mesh): //source/blender/editors/mesh/editmesh_undo.c:740 mesh_undosys_step_decode: name='Triangulate Faces', failed to enter edit-mode for object 'OBCube.001', undo state invalid`
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2018-04-18 18:42:24 +02:00
Vuk Gardašević changed title from Error in console after multi-objetc editing undo to Error in console after multi-object editing undo 2018-04-19 08:12:47 +02:00

This issue was referenced by 81673f5ab7

This issue was referenced by 81673f5ab7f4d404b9b263bac88e8b271b0ccdac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54712
No description provided.