Fix T54712: Undo w/ multi-edit failed